upgrade jdk-21 upgrade junit 5